# saaCrypt

./: .gitignore  CrClass.cpp  CrClass.h  CrClass.rgs  CryptoClient.cpp  CryptoClient.h  StdAfx.h  crypt32.h  readme.txt  resource.h  saaCrypt.cpp  saaCrypt.def  saaCrypt.dsp  saaCrypt.dsw  saaCrypt.h  saaCrypt.idl  saaCrypt.rc  saaCrypt.sln  saaCrypt.sln.old  saaCrypt.suo.old  saaCrypt.vcproj  saaCrypt.vcproj.7.10.old  saaCrypt.vcxproj  saaCrypt.vcxproj.filters  saaCrypt1.vcxproj  saaCryptps.def  saaCryptps.mk
ReleaseMinDependency/: mt.dep  (+4 more)
SDK/rdk/reader/source/fat12/: Makefile.am  ehdids.c  ehdiflag.c  ehdis.c  f12acall.c  f12cdup.c  f12cfree.c  f12con.c  f12dccl.c  f12dcl.c  f12dclr.c  f12dcnxt.c  f12dcon.c  f12dcop.c  f12def.c  f12dopen.c  f12dscl.c  f12dsnxt.c  f12dsop.c  f12grpc.c  f12grpn.c  f12grpo.c  f12iflag.c  f12iinst.c  f12iname.c  f12inick.c  f12isame.c  f12istat.c  f12kchs.c  f12kcls.c  f12klen.c  f12kopen.c  f12kread.c  f12kunl.c  f12kwri.c  f12lin.c  f12lock.c  f12lout.c  f12rreg.c  f12trest.c  (+16 more)
SDK/rdk/reader/source/fat12/Win32/: Makefile.am  fat12_rc.h  fat12_rc.rc  fat12dll.c
SDK/rdk/reader/source/fat12/test/: Makefile.am  test.cpp  tst12prj.c  tst12prj.h
SDK/rdk/reader/source/fat12/win_ms/: Version.Desc.rc  Version.Itanium.rc  Version.Pocket PC 2003 (ARMV4).rc  Version.Win32.rc  Version.WinCEx86.rc  Version.x64.rc  fat12.vcproj  fat12tst.vcproj
SDK/rdk/reader/source/pcsc/test/: Makefile.am  pcsctprj.c  pcsctprj.h  test.c
SDK/rdk/reader/source/ric/: Makefile.am  librdrric.sym  mag_chp.c  mag_con.c  mag_dup.c  mag_fld.c  mag_fop.c  mag_is.c  mag_is_impl.h  mag_log.c  mag_lout.c  mag_open.c  mag_rc.c  mag_reg.c  mag_rest.c  mag_same.c  mag_sf.c  mag_uform.c  mag_uni.c  mag_unig.c  mag_vpin.c  osc2_flen.c  osc2_fop.c  osc2_is.c  osc2_offs.c  osc2_open.c  osc2_rd.c  osc2_rest.c  osc2_wr.c  osc2ids.c  osc2sf.c  osc_is.c  osc_reg.c  oscchp.c  oscids.c  oscuform.c  ric_clos.c  ric_con.c  ric_disc.c  ric_dup.c  (+26 more)
SDK/rdk/reader/source/ric/Win32/: ric_dll.c  ric_prop.c  ric_rc.h  ric_rc.rc
SDK/rdk/reader/source/ric/win_ms/: Version.Desc.rc  Version.Itanium.rc  Version.Win32.rc  Version.x64.rc  ric.vcproj
SDK/rdk/reader/source/rndm/test/: Makefile.am  rndm_tst.h  test.c
SDK/rdk/reader/source/rndm0/: Makefile.am  librdrrndm0.sym  r0_exp.c  r0_prj.c  r0_prj.h
SDK/samples/CSP/: MakeFile  Makefile.am  Makefile.unix  csp.mak  csp.sln  makefile.inc
SDK/samples/CSP/CEnvelop/: CEnvelop.vbs  Makefile
SDK/samples/CSP/CSignData/: CSignData.vbs  Makefile
SDK/samples/CSP/CodingData/: CodingData.c  CodingData.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/CreatingHash/: CreatingHash.c  CreatingHash.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/CreatingKeyContainer/: CreatingKeyContainer.c  CreatingKeyContainer.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/CryptAcquireContext/: CryptAcquireContext.c  CryptAcquireContext.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/CryptMessages/: CryptMessages.c  CryptMessages.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/CryptMsgSign/: CryptMsgSign.cpp  CryptMsgSign.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/DecryptFile/: DecryptFile.c  DecryptFile.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/DerivingSessionKey/: DerivingSessionKey.c  DerivingSessionKey.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/DuplicatingHash/: DuplicatingHash.c  DuplicatingHash.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/DuplicatingSessionKey/: DuplicatingSessionKey.c  DuplicatingSessionKey.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/EncryptContainer/: EncryptContainer.c  Makefile.am  Makefile.unix
SDK/samples/CSP/EncryptFile/: EncryptFile.c  EncryptFile.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/EnumeratingProviders/: EnumeratingProviders.c  EnumeratingProviders.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/ExportInFile/: ExportInFile.c  ExportInFile.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/ExportingCertificate/: ExportingCertificate.c  ExportingCertificate.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/ExportingSessionKey/: ExportingSessionKey.c  ExportingSessionKey.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/KernelMode/: cpdrvlibsample.c  sources
SDK/samples/CSP/KeyCopy/: KeyCopy.c  KeyCopy.vcproj  Makefile  Makefile.am  Makefile.unix
SDK/samples/CSP/Request/: Makefile  Request.html  Request.vbs
SDK/samples/CSP/SILENT/: Makefile  Makefile.am  Makefile.unix  SILENT.c  SILENT.vcproj
SDK/samples/CSP/SessionKeyParameters/: Makefile  Makefile.am  Makefile.unix  SessionKeyParameters.c  SessionKeyParameters.vcproj
SDK/samples/CSP/SigningHash/: Makefile  Makefile.am  Makefile.unix  SigningHash.c  SigningHash.vcproj
SDK/samples/CSP/WordPluginCheck/: Makefile  Program.cs  WordPluginCheck.csproj
SDK/samples/CSP/WordPluginCheck/Properties/: AssemblyInfo.cs
SDK/samples/CSP/WordSignCheck/: Makefile  Program.cs  WordSignCheck.csproj
SDK/samples/CSP/WordSignCheck/Properties/: AssemblyInfo.cs
SDK/samples/CSP/XMLSignForVerify/: Makefile  ReadMe.txt  XMLSignForVerify.cpp  XMLSignForVerify.vcproj  doc_to_sign_nai.xml  doc_to_sign_oai.xml  node_to_sign_nai.xml  node_to_sign_oai.xml
SDK/samples/CSP/XMLVerify/: InfoPathTemplate.xsn  InfoPathTemplate_2.xsn  Makefile  ReadMe.txt  XMLVerify.cpp  XMLVerify.vcproj  ip_doc_signed.xml  ip_doc_signed_nai.xml  ip_doc_signed_oai.xml  ip_doc_to_sign.xml  ip_node_signed.xml  ip_node_signed_nai.xml  out_signature_nai.xml  out_signature_oai.xml
SDK/samples/CSP/XMLVerifyTwoSigs/: Makefile  XMLVerifyTwoSigs.cpp  XMLVerifyTwoSigs.vcproj  doc_to_sign_two.xml  ip_doc_signed2.xml  ip_node_signed2.xml  node_to_sign_two.xml
SDK/samples/CSP/include/: msxml5.idl
SDK/samples/SSPI/WebClient/: Makefile  Makefile.am  Makefile.unix  WebClient.c  WebClient.vcproj
SDK/samples/SSPI/WebServer/: Makefile  Makefile.am  Makefile.unix  WebServer.c  WebServer.vcproj
(+119 files in other folders)
