SUBDIRS= . CodingData CreatingHash CreatingKeyContainer \
	 CryptAcquireContext CryptMessages CryptMsgSign DecryptFile \
         DerivingSessionKey DuplicatingHash DuplicatingSessionKey \
	 EncryptContainer \
         EncryptFile EnumeratingProviders ExportInFile ExportingCertificate \
         ExportingSessionKey KeyCopy SessionKeyParameters \
	 SigningHash SILENT

srctestdir=$(prefix)/src/doxygen/CSP
srctest_DATA=@srcdir@/Makefile.unix
EXTRA_DIST=Makefile.unix
